--- a/ledger_system/projects/templates/projects/client_dashboard.html
+++ b/ledger_system/projects/templates/projects/client_dashboard.html
@@ -8,6 +8,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Client Dashboard</title>
+  <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
