--- a/ledger_system/projects/templates/projects/client_login.html
+++ b/ledger_system/projects/templates/projects/client_login.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Client Login</title>
   <style>
