--- a/ledger_system/projects/templates/projects/daily.html
+++ b/ledger_system/projects/templates/projects/daily.html
@@ -6,6 +6,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
     <title>Daily Report</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
